--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,16 @@
-[*.svg]
+root = true
+
+[*.{js,json,ts,svg,yml,md}]
 charset = utf-8
 end_of_line = lf
-trim_trailing_whitespace = false
+insert_final_newline = true
+trim_trailing_whitespace = true
 indent_style = space
-indent_size = 2
+indent_size = 4
+
+[*.md]
+trim_trailing_whitespace = false
+
+[LICENSE*]
 insert_final_newline = false
+trim_trailing_whitespace = false
